* Fixed an issue with linear ICC profile generation where colorants were not correctly adapted to D50 (#1683)
* Fixed computing output required space for Apply Registration (through GUI) if some images were not selected (#1690)
* Fixed incorrect SPCC filter plots in "Plot All" in narrowband mode (#1691)

**Improvements**
* Removed legacy GraXpert interface to be replaced by the new GraXpert-AI.py script (#1620, #1611, #1573)
* Allow saving plots to files using sirilpy.connection.SirilInterface.xy_plot() (#1670)
* Filechoosers in the calibration tab and calibration preferences remember the last directory (#1664)
* Updated overlay_add_polygon() to use shared memory, to handle polygons with large numbers of sides
* Improved compatibility of sirilpy.tkfilebrowser with tkinter.filedialog (allows replacing the awful Linux tk filedialog)
* Improved the GPU module helper methods in sirilpy
* Fixed a crash with RGB compositing (#1562)
* Changed the default GHT colour mode from human weighed luminance to independent (!899)
* Added / improved GPU helper modules to assist with installation and testing of key GPU-related modules. (!895)
* Allow "Crop Sequence" with the internal sequence used in RGB composition, to aid with LRGB workflows. (!902)
* Add python method to draw Polygons in the Siril overlay.

siril 1.4.0-beta2
05/21/25

**Fixes:**
* Fixed option -weight= for stack command and add filtering criteria in HISTORY key of stacked image (#1545)
* Fixed crash and slowness when refreshing the scripts list (#1548, #1574)
* Python scripts are now sorted alphabetically (#1559)
* Fixed crash in Noise Reduction with Independent Channels option selected (#1567)
* Fixed UI hang when manually refreshing scripts or SPCC (#1566)
* Fixed incorrect behaviour when using set_image_pixeldata to chage the number of channels (#1570)
* Fixed incorrect siril command return values (#1569)
* Fixed crash in astrometric registration when the reference image could not be platesolved (#1557)