@@ -21,6 +21,7 @@ xx/xx/25
 * Fixed an issue with linear ICC profile generation where colorants were not correctly adapted to D50 (#1683)
 * Fixed computing output required space for Apply Registration (through GUI) if some images were not selected (#1690)
 * Fixed incorrect SPCC filter plots in "Plot All" in narrowband mode (#1691)
+* Fixed an issue where starnet was not updating a data structure that sirilpy get_image_fits_header() relied on
 
 **Improvements**
 * Removed legacy GraXpert interface to be replaced by the new GraXpert-AI.py script (#1620, #1611, #1573)
